--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+  <article>
+    <header>
+      <h1>Super Epic Tile Layer</h1>
+      <strong>$35</strong>
+      <p>(In stock)</p>
+    </header>
 
+    <img src="images/placeholder-4by3.svg" alt="#">
+
+    <dl>
+      <dt>Ages:</dt>
+      <dd>8+</dd>
+      <dt>Number players:</dt>
+      <dd>2–5</dd>
+      <dt>Length:</dt>
+      <dd>45 min</dd>
+
+      <dt>Average Rating:</dt>
+      <dd>4/5</dd>
+    </dl>
+
+      <a href="#">[Add to Wishlist!]</a>
+      <a href="#">[Add to Cart]</a>
 </body>
 </html>
