--- a/index.html
+++ b/index.html
@@ -83,13 +83,7 @@
         <meter min="0" max="5" value="5">5/5</meter>
         <p>This game is bloody amazing! My mates and I totally love playing it.</p>
       </article>
-
-
     </aside>
-
-
-
-
-
-  </body>
-  </html>
+  </article>
+</body>
+</html>
